src/ssa/snapshots/test__addi_no_dest.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = x1
%1 = add %0, 50
ret 1, 8
