src/ssa/snapshots/test__addi_no_src.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
x(%0)2 = 50
ret 1, 8
