src/ssa/snapshots/test__branch_0_x1_eq.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = x1
%1 = cmp EQ 0, %0
%2 = select %1, 1024, 4
ret 0, %2
