src/ssa/snapshots/test__jal_basic_die.snap
---
source: src/ssa/opt.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
x(%0)4 = 4
ret 0, 4096
