src/ssa/snapshots/test__jalr_bit.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = add %2, 2047
%4 = and %3, 4294967294
x(%0)4 = 52
ret 0, %4
