src/ssa/snapshots/test__max_analysis.snap
---
source: src/ssa/analysis.rs
expression: "ShowLifetimes::new(&lifetimes, &instrs)"
---
[7, -, -, -, -, -, -, -] %0 = x10
[6, 1, -, -, -, -, -, -] %1 = x11
[5, 0, 3, -, -, -, -, -] %2 = add %0, %1
[4, -, 2, 2, -, -, -, -] %3 = srl %2, 31
[3, -, 1, 1, -, -, -, -] x12 = %3
[2, -, 0, 0, 2, -, -, -] %4 = and %2, %3
[1, -, -, -, 1, -, -, -] x11 = %4
[0, -, -, -, 0, 1, -, -] %5 = add %0, %4
[-, -, -, -, -, 0, -, -] x10 = %5
[-, -, -, -, -, -, 1, -] %6 = x1
[-, -, -, -, -, -, 0, 1] %7 = add %6, 1040
[-, -, -, -, -, -, -, 0] ret 0, %7

