src/ssa/snapshots/test__max_lifetimes.snap
---
source: src/ssa/analysis.rs
expression: "ShowLifetimes::new(&lifetimes, &instrs)"
---
[10, -, -, -, -, -, -, -, -] %0 = args[0]
[ 9, 7, -, -, -, -, -, -, -] %2 = x(%0)10
[ 8, 6, 1, -, -, -, -, -, -] %3 = x(%0)11
[ 7, 5, 0, 3, -, -, -, -, -] %4 = add %2, %3
[ 6, 4, -, 2, 2, -, -, -, -] %5 = srl %4, 31
[ 5, 3, -, 1, 1, -, -, -, -] x(%0)12 = %5
[ 4, 2, -, 0, 0, 2, -, -, -] %6 = and %4, %5
[ 3, 1, -, -, -, 1, -, -, -] x(%0)11 = %6
[ 2, 0, -, -, -, 0, 1, -, -] %7 = add %2, %6
[ 1, -, -, -, -, -, 0, -, -] x(%0)10 = %7
[ 0, -, -, -, -, -, -, 1, -] %8 = x(%0)1
[--, -, -, -, -, -, -, 0, 1] %9 = add %8, 1040
[--, -, -, -, -, -, -, -, 0] ret 0, %9

