src/ssa/snapshots/test__mem_read_write.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
%2 = x(%0)1
%3 = add %2, 0
%4 = signed dword m(%1)%3
%5 = add %4, 100
%6 = add %5, 50
m(%1)%6 = dword %2
x(%0)2 = %5
ret 1, 16
