src/ssa/snapshots/test__sys_break.snap
---
source: src/ssa/lower.rs
expression: DisplayDeferSlice(&instrs)
---
%0 = args[0]
%1 = args[1]
ret 1, 4
